--- a/Lab3/src/app/pogodynka/pogodynka.component.css
+++ b/Lab3/src/app/pogodynka/pogodynka.component.css
@@ -1,21 +1,7 @@
-/*TOP BAR*/
-.weathericon{
-  margin-top: 0.5%;
-  height: 50px;
-}
-.top-bar{
-background-color: wheat;
-  width: 100%;
-  height: 26.5%;
-  border-bottom: 2px solid #d8dbe1;
-  z-index: 1;
 
-}
 .center-input{
-
 text-align: center;
-
-  margin-top: 0.1%;
+  margin-top: 50px;
 }
 .center-button{
   margin-bottom: 1%;
@@ -23,20 +9,14 @@ text-align: center;
 
 }
 
-/*CONTENT*/
-
 .cities{
-margin-top: 10px;
-  overflow-y: auto;
-
-  min-width: 100px;
-  max-width: 100%;
+  margin-top: 100px;
   text-align: center;
   vertical-align: center;
-
-  border: 1px solid grey;
+  width:250px;
+  background-color: red;
     justify-content: space-around;
-  background-color: lightgreen;
+
 }
 
 .city{
@@ -51,6 +31,7 @@ margin-top: 10px;
 .cities-city {
   min-width: 120px;
  margin:10px;
+
 
 ;
 }
