--- a/Lab3/src/app/pogodynka/pogodynka.component.html
+++ b/Lab3/src/app/pogodynka/pogodynka.component.html
@@ -1,7 +1,8 @@
 <div class="center-input">
       <label>Miasto:</label>
       <input type="text" [(ngModel)]="nazwaMiasta">
-      <button (click)="zapytaniePogoda()">Dodaj</button>
+      <br/><button (click)="zapytaniePogoda()">Dodaj</button>
+      <br/><button (click)="wyczyscLS()">Wyczyść</button>
     </div>
 
     <div class="cities">
