--- a/Notekeep/src/app/notes-component/notes.component.css
+++ b/Notekeep/src/app/notes-component/notes.component.css
@@ -15,6 +15,7 @@
   justify-content: space-around;
   gap: 20px;
 }
+
 .addnoteform{
   display:flex;
   flex-direction: row;
@@ -23,6 +24,7 @@
   margin-top: 2%;
   margin-left: 5%;
   gap: 20px;
+  border-radius: 20px;
 
 }
 /*CONTENT*/
@@ -39,7 +41,7 @@
   text-align: center;
   vertical-align: center;
   align-items: center;
-
+  border-radius: 20px;
   border: 1px solid #d8dbe1;
   border-radius: 20px;
   flex-wrap: wrap;
@@ -50,16 +52,16 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 350px;
+  max-width: 350px;
   height: auto;
   border: 1px solid #d8dbe1;
   background-color: white;
-
-
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 .notes-note {
-  min-width: 120px;
+  min-width: 320px;
   margin:10px;
   text-align: center;
 ;
